Fixed navigation double layout issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -265,6 +265,10 @@ li {
   }
 }
 
+.main-navbar {
+  display: none;
+}
+
 // Desktop Layout
 
 @media screen and (min-width: 36rem) {
